@@ -12,3 +12,4 @@
 12/27/2017
    -   Implementing the AI
    -   Added a popup menu to chose single vs 2 player but it currently has no effect
+   -   AI is relatively implemented, only choses "best" decision for its current move not in the grand scheme of things
